@@ -35,6 +35,9 @@
      [serverloop.c sshconnect.c uuencode.c]
      move #include <netinet/in.h> out of includes.h; ok deraadt@
      (also ssh-rand-helper.c logintest.c loginrec.c)
+   - djm@cvs.openbsd.org 2006/07/06 10:47:05
+     [servconf.c servconf.h session.c sshd_config.5]
+     support arguments to Subsystem commands; ok markus@
 
 20060706
  - (dtucker) [configure.ac] Try AIX blibpath test in different order when
@@ -4768,4 +4771,4 @@
    - (djm) Trim deprecated options from INSTALL. Mention UsePAM
    - (djm) Fix quote handling in sftp; Patch from admorten AT umich.edu
 
-$Id: ChangeLog,v 1.4368 2006/07/10 10:35:38 djm Exp $
+$Id: ChangeLog,v 1.4369 2006/07/10 10:36:47 djm Exp $
